# AWA

./: .gitignore  README.md  config.example.yaml  main.py  notifier.py  pyproject.toml
plugins/: llm.py  state_diff.py
plugins/configs-examples/: llm.json
watchers/: imap_watcher.py  openreview_watcher.py  rss_watcher.py  system_watcher.py
