[project]
name = "atomic-watcher-aquarium"
version = "0.1.0"
description = "A hackable, asynchronous, modular monitoring and notification system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"PyYAML",
	"aiohttp",
	"loguru",
	"rich",
	"python-ntfy",
	"psutil",
	"feedparser",
	"openai",
	"openreview-py",
	"python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
